[gd_scene load_steps=10 format=3 uid="uid://ro3yhobq5dcd"]

[ext_resource type="Script" path="res://Scenes/PlayerShip.gd" id="1_dmfcx"]
[ext_resource type="Script" path="res://Scenes/exterior.gd" id="1_jafm8"]
[ext_resource type="Texture2D" uid="uid://87euu0j7ppyr" path="res://Resources/Art/spaceship_placeholder.png" id="2_m0my0"]
[ext_resource type="Texture2D" uid="uid://bysr5r8if5bey" path="res://Resources/Art/rocket_plume/4.png" id="4_1xxcn"]
[ext_resource type="PackedScene" path="res://Scenes/asteroid.tscn" id="4_i7i7e"]
[ext_resource type="Texture2D" uid="uid://du8jjb0ughv46" path="res://Resources/Art/rocket_plume/3.png" id="5_x5wgr"]
[ext_resource type="Texture2D" uid="uid://dhut1nha44x7m" path="res://Resources/Art/rocket_plume/2.png" id="6_vnjeq"]
[ext_resource type="Texture2D" uid="uid://bk20wlrdigcpe" path="res://Resources/Art/rocket_plume/1.png" id="7_leqxl"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8672g"]
size = Vector2(67, 136)

[node name="Exterior" type="Node2D"]
script = ExtResource("1_jafm8")

[node name="PlayerShip" type="RigidBody2D" parent="."]
position = Vector2(-4.66748, 1.26294)
script = ExtResource("1_dmfcx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerShip"]
position = Vector2(-5.5, 4)
shape = SubResource("RectangleShape2D_8672g")

[node name="Sprite2D" type="Sprite2D" parent="PlayerShip"]
position = Vector2(-3, 1)
texture = ExtResource("2_m0my0")

[node name="Camera2D" type="Camera2D" parent="PlayerShip"]
position = Vector2(-6.33252, -1.26294)
zoom = Vector2(0.5, 0.5)

[node name="plume_4" type="Sprite2D" parent="PlayerShip"]
visible = false
position = Vector2(-2.33252, 110.737)
scale = Vector2(0.160003, 0.320002)
texture = ExtResource("4_1xxcn")

[node name="plume_3" type="Sprite2D" parent="PlayerShip"]
visible = false
position = Vector2(-2.33252, 98.7371)
scale = Vector2(0.200001, 0.200001)
texture = ExtResource("5_x5wgr")

[node name="plume_2" type="Sprite2D" parent="PlayerShip"]
visible = false
position = Vector2(-2.33252, 98.7371)
scale = Vector2(0.200001, 0.200001)
texture = ExtResource("6_vnjeq")

[node name="plume_1" type="Sprite2D" parent="PlayerShip"]
visible = false
position = Vector2(-2.33252, 98.7371)
scale = Vector2(0.200001, 0.200001)
texture = ExtResource("7_leqxl")

[node name="Asteroid" parent="." instance=ExtResource("4_i7i7e")]
position = Vector2(880, 253)
